<resources>
    <string name="app_name">Home Space</string>
    <string name="filled_bullet"> \u25CF</string>


    <string name="tap_preview_message">Tap on the preview to focus</string>
    <string name="generalError">Oops something went wrong. Try again.</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="unexpectedError">An unexpected error occurred.</string>
    <string name="noMemory">No space available to store the image.</string>
    <string name="no_camera_warning">No camera on this device</string>
    <string name="need_camera_permissions">Need Camera Permissions</string>
    <string name="camera_permission_description">This app needs camera for capturing image</string>
    <string name="grant">Grant</string>
    <string name="go_to_grant_permissions">Go to permissions to grant camera, phone, storage, audio and location permissions.</string>
    <string name="unable_to_get_permission">Unable to get Permission</string>
    <string name="cancel">CANCEL</string>
    <string name="imageSaveFailed">Image save failed</string>
    <string name="info_image">Information ImageView</string>
    <string name="image_remark">Add a remark…</string>
    <string name="take_pic">Take Picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_phone_number">Enter phone Number</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_address">Enter address</string>
    <string name="submit">Submit</string>
    <string name="continue_txt">Continue</string>
    <string name="take_five_pic">Please take 5 pictures.</string>
    <string name="clicked_all_pic">Did you clicked all 5 pictures ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="any_lag">Do you feel any lag, screen freeze or black screen while capturing image?</string>
    <string name="comment_any_issue">Comment (if any other issues occur)</string>
    <string name="comment">Comment</string>
    <string name="confirmation">Confirmation</string>
    <string name="want_to_submit">Do you want to submit it ?</string>
    <string name="try_after_some_time">Sorry for inconvenience, Please try after some time.</string>
    <string name="no_image_found_message">No Image Found, Please click another image.</string>
    <string name="search">Search</string>
    <string name="menu_list">Linear List</string>
    <string name="menu_staggered_list">Staggered List</string>
    <string name="delete">Delete</string>
    <string name="delete_data_message">This note will be deleted</string>
    <string name="select_all">Select All</string>
    <string name="add_menu_title">Add</string>
    <string name="home_space">Home Space</string>
    <string name="add_data_dialog_title">New Category</string>
    <string name="add_sub_category_data_dialog_title">Add Note</string>
    <string name="add_sub_category_data_dialog">Note</string>
    <string name="add_a_category">Add a category</string>
    <string name="save_button">save</string>
    <string name="add_button">ADD</string>
    <string name="enter_category_name_error">Enter $ </string>


    <!--date_time_format-->
    <string name="day_date_format">EEEE, MMM dd yyyy</string>
    <string name="custom_date">MMM dd, hh:mm aa</string>
    <string name="date_format_past">MMM dd, hh:mm aa</string>
    <string name="day_format_long">EEEE, MMMM dd, yyyy</string>
    <string name="time_format">hh:mm aa</string>
    <string name="hour_min_full">HH:mm</string>
    <string name="date_time_format">EEEE, MMM dd, yyyy hh:mm aa</string>
    <string name="simple_date">dd/MM/yyyy</string>
    <string name="simple_date_time">dd/MM/yyyy hh:mm a</string>
    <string name="week_lower_only">week</string>
    <string name="empty_date">--/--</string>
    <string name="amount_only">Amount</string>
    <string name="expense_file_title">IDS KISAN NETWORK (P) LTD</string>
    <string name="patti_file_title">Patti/Purchase Note</string>
    <string name="please_wait">Please wait…</string>
    <string name="uploading_only">Uploading…</string>
    <string name="day_date_time_short">EEE, MMM dd, yyyy hh:mm aa</string>
    <string name="day_date_short">EEE, MMM dd, yyyy</string>
    <string name="full_time_format">hh:mm aa dd,MMM,yyyy</string>
    <string name="date_month_in_word">dd-MMM-yyyy</string>
    <string name="empty_text">--/--</string>
    <string name="month_date_format">MMMM dd</string>
    <string name="add_first_note">Add your first note</string>
    <string name="add_first_note_point">Add points</string>
    <string name="no_note_found">No Note Found </string>
    <string name="copy">copy</string>
    <string name="copy_all">Copy all content</string>
    <string name="share_all">Share all content</string>
    <string name="edit">edit</string>
    <string name="share">share</string>
    <string name="remove_all">Remove All</string>
    <string name="more">more</string>
    <string name="empty_view_text">empty</string>
    <string name="no_note_available">No note available !</string>
    <string name="no_data_available">No data available !</string>
    <string name="mark_as_done">mark as done</string>
    <string name="mark_as_progress">mark as in-progress</string>
    <string name="mark_as_pending">mark as pending</string>
</resources>
