<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuAddAll"
        android:icon="@drawable/ic_tick_all"
        android:title="@string/remove_all"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuRemoveAll"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuDelete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/copy"
                android:icon="@drawable/ic_content_copy_black_24dp"
                android:title="@string/copy" />

            <item
                android:id="@+id/edit"
                android:icon="@drawable/ic_edit_black"
                android:title="@string/edit" />

            <item
                android:id="@+id/menuShare"
                android:icon="@drawable/ic_share_black"
                android:title="@string/share" />

            <item
                android:id="@+id/markAsFinish"
                android:icon="@drawable/ic_done_black_24dp"
                android:title="@string/mark_as_done" />

            <item
                android:id="@+id/markAsPending"
                android:icon="@drawable/ic_cancel"
                android:title="@string/mark_as_pending" />

            <item
                android:id="@+id/markAsInProgress"
                android:icon="@drawable/cast_mini_controller_progress_drawable"
                android:title="@string/mark_as_progress" />

        </menu>
    </item>
</menu>