<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sub_menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title=""
        app:showAsAction="always">

        <menu>

        <item
            android:id="@+id/sub_menu_copy"
            android:icon="@drawable/ic_content_copy_black_24dp"
            android:title="@string/copy_all" />

        <item
            android:id="@+id/sub_menu_share"
            android:icon="@drawable/ic_share_black"
            android:title="@string/share_all" />

        </menu>

    </item>

</menu>